DTSRB-5445 Initial commit with utility method